# QtSpaceInvaders

./: .gitignore  CMakeLists.txt  Main.qml  README.md  com.mehtonen.QtSpaceInvaders.desktop  com.mehtonen.QtSpaceInvaders.json  com.mehtonen.QtSpaceInvaders.metainfo.xml  main.cpp
